# smpl-Python

./: LICENSE  README.md  Smpl.py  setup.cfg
src/simulation_smpl/: __init__.py  smpl.py
test/: test.py
