[metadata]
name = simulation_smpl
version = 1.0.1
description = A Python implementation of the discrete event simulation environment 'smpl' (original C version by Myron H. MacDougall)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = simulation, smpl
license = MIT
project_urls =
    Bug Tracker = https://github.com/fontoura/smpl-Python/issues
    Source Code = https://github.com/fontoura/smpl-Python

[options]
include_package_data = False
packages = find:
package_dir =
    =src

[options.packages.find]
where = ./src
